[project]
name = "gcode_machine"
authors = [
  {name = "Michael Franzl", email = "public.michael@franzl.name"},
]
version = "0.0.1"
description = "A simple CNC state machine implemented in Python that can be used for simulation and processing of G-code"
readme = "README.md"
requires-python = ">=3.5"
license = {file = "COPYING"}
keywords = ["cnc", "gcode", "state machine"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "Makefile",
  ".*",
  "test",
]
